update thread